--- a/ms-reclamoProveedor/src/main/resources/application.properties
+++ b/ms-reclamoProveedor/src/main/resources/application.properties
@@ -1,12 +1,28 @@
-spring.application.name=ms-reclamosproveedor
-server.port = 8020
+spring.application.name=ms-reclamoProveedor
 
-spring.datasource.url = jdbc:mysql://localhost:3306/ms_reclamos_proveedor
-spring.datasource.username = root
-spring.datasource.password = davs
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+server.port=8040
 
-spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
-spring.jpa.generate-ddl = true
+# Configuración de base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/ms_reclamo_proveedor
+spring.datasource.username=root
+spring.datasource.password=davs
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-logging.level.org.hibernate.SQL = DEBUG
+# Configuración JPA
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Configuración de microservicios
+microservices.proveedores.url=http://localhost:8010
+microservices.compra.url=http://localhost:8030
+
+# Configuración de Feign
+feign.client.config.default.connectTimeout=5000
+feign.client.config.default.readTimeout=5000
+
+# Logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.grupo.allfym.ms.reclamoProveedor=DEBUG
+logging.level.feign=DEBUG
