Add data sources for ms_reclamos, ms_reclamo_proveedor, ms_compra, ms_proveedores, and ms_clientes; update encodings and pom.xml for new modules

--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,7 @@
         <module>ms-reclamos</module>
         <module>ms-compra</module>
         <module>ms-proveedores</module>
+        <module>ms-productos</module>
+        <module>ms-almacen</module>
     </modules>
 </project>
