--- a/ms-compra/src/main/resources/application.properties
+++ b/ms-compra/src/main/resources/application.properties
@@ -1,25 +1,13 @@
 spring.application.name=ms-compra
 
-server.port=8030
+server.port=8020
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_compra
 spring.datasource.username=root
-spring.datasource.password=davs
+spring.datasource.password=unc123
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl = true
-spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
-
-# Configuración de microservicios
-microservices.proveedores.url=http://localhost:8010
-
-# Configuración de Feign
-feign.client.config.default.connectTimeout=5000
-feign.client.config.default.readTimeout=5000
-
-# Logging para Feign (debugging)
-logging.level.com.grupo.allfym.ms_compra.clients.ProveedorCliente=DEBUG
-logging.level.feign=DEBUG
