--- a/ms-proveedores/src/main/resources/application.properties
+++ b/ms-proveedores/src/main/resources/application.properties
@@ -3,18 +3,10 @@ server.port=8010
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_proveedores
 spring.datasource.username=root
-spring.datasource.password=davs
+spring.datasource.password=unc123
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl = true
-spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
-
-# Configuración de microservicios
-microservices.compra.url=http://localhost:8030
-
-# Configuración de Feign
-feign.client.config.default.connectTimeout=5000
-feign.client.config.default.readTimeout=5000
