--- a/ms-clientes/src/main/resources/application.properties
+++ b/ms-clientes/src/main/resources/application.properties
@@ -1,18 +1,12 @@
 spring.application.name=ms-clientes
-server.port=8082
+server.port = 8010
 
-# Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/ms_clientes?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=davs
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/ms_clientes
+spring.datasource.username = root
+spring.datasource.password = UNC123
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
-# JPA/Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl = true
 
-# Logging
-logging.level.org.springframework.web=DEBUG
-logging.level.com.grupo.allfym.ms.clientes=DEBUG
+logging.level.org.hibernate.SQL = DEBUG
