--- a/ms-ventas/src/main/resources/application.properties
+++ b/ms-ventas/src/main/resources/application.properties
@@ -1,21 +1,12 @@
 spring.application.name=ms-ventas
-server.port=8020
+server.port = 8020
 
-# Configuración de base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/ms_ventas
-spring.datasource.username=root
-spring.datasource.password=davs
+spring.datasource.url = jdbc:mysql://localhost:3306/ms_ventas
+spring.datasource.username = root
+spring.datasource.password = UNC123
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl = true
-spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL = DEBUG
-
-# Configuración de microservicios
-microservices.clientes.url=http://localhost:8082
-
-# Configuración de Feign
-feign.client.config.default.connectTimeout=5000
-feign.client.config.default.readTimeout=5000
