--- a/ms-proveedores/src/main/resources/application.properties
+++ b/ms-proveedores/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8010
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_proveedores
 spring.datasource.username=root
-spring.datasource.password=unc123
+spring.datasource.password=davs
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
