--- a/ms-compra/src/main/resources/application.properties
+++ b/ms-compra/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8020
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_compra
 spring.datasource.username=root
-spring.datasource.password=davs
+spring.datasource.password=unc123
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
