--- a/ms-productos/src/main/resources/application.properties
+++ b/ms-productos/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8070
 # Configuración de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_productos
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=UNC123
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 #Jpa y Hibernate configuration
