--- a/ms-almacen/src/main/resources/application.properties
+++ b/ms-almacen/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8072
 # Configuración de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_almacen
 spring.datasource.username=root
-spring.datasource.password=davs
+spring.datasource.password=unc123
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 #Jpa y Hibernate configuration
