--- a/ms-almacen/src/main/resources/application.properties
+++ b/ms-almacen/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=ms-almacen
 
 # Puerto del servidor
-server.port=8072
+server.port=8010
 # Configuración de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_almacen
 spring.datasource.username=root
-spring.datasource.password=unc123
+spring.datasource.password=admin
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 #Jpa y Hibernate configuration
