--- a/ms-clientes/src/main/resources/application.properties
+++ b/ms-clientes/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ms-clientes
-server.port = 8010
+server.port = 8020
 
 spring.datasource.url = jdbc:mysql://localhost:3306/ms_clientes
 spring.datasource.username = root
-spring.datasource.password = UNC123
+spring.datasource.password = admin
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
