--- a/ms-compra/src/main/resources/application.properties
+++ b/ms-compra/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=ms-compra
 
-server.port=8020
+server.port=8030
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_compra
 spring.datasource.username=root
-spring.datasource.password=unc123
+spring.datasource.password=admin
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
