--- a/ms-pagos/src/main/resources/application.properties
+++ b/ms-pagos/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8040
 
 spring.datasource.url = jdbc:mysql://localhost:3306/ms_pagos
 spring.datasource.username = root
-spring.datasource.password = UNC123
+spring.datasource.password = admin
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
