--- a/ms-proveedores/src/main/resources/application.properties
+++ b/ms-proveedores/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ms-proveedores
-server.port=8010
+server.port=8060
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_proveedores
 spring.datasource.username=root
-spring.datasource.password=unc123
+spring.datasource.password=admin
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
