--- a/ms-reclamoProveedor/src/main/resources/application.properties
+++ b/ms-reclamoProveedor/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=ms-reclamoProveedor
 
-server.port=8040
+server.port=8070
 
 # Configuración de base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_reclamo_proveedor
 spring.datasource.username=root
-spring.datasource.password=davs
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración JPA
