--- a/ms-reclamos/src/main/resources/application.properties
+++ b/ms-reclamos/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ms-reclamos
-server.port = 8030
+server.port = 8080
 
 spring.datasource.url = jdbc:mysql://localhost:3306/ms_reclamos
 spring.datasource.username = root
-spring.datasource.password = UNC123
+spring.datasource.password = admin
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
