--- a/ms-ventas/src/main/resources/application.properties
+++ b/ms-ventas/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=ms-ventas
-server.port=8020
+server.port=8090
 
 # Configuración de base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_ventas
 spring.datasource.username=root
-spring.datasource.password=UNC123
+spring.datasource.password=admin
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
